--- a/index.html
+++ b/index.html
@@ -25,11 +25,29 @@
             <h2 id="compHand">Computers Choice</h2>
         </div>  
     </div>
+
     <div id="result">
         <h2 id="score">Winner</h2>
         <button id="playAgain">Play Again!</button>
     </div>
+
     <h2 id="countDown">3</h2>
+
+    <div id="scoreKeeper">
+        <h2>Scores:</h2>
+        <div class="playerScore">
+            <div class="score">
+                <label for="player">Player</label>
+                <span id="playerScore"name="player">0</span>
+            </div>  
+            <span>:</span>
+            <div class="score">
+                <label for="CPU">CPU</label>
+                <span id="cpuScore" name="CPU">0</span>
+            </div>         
+        </div>     
+    </div>
+
     </div>
     <script src="script.js"></script>
 </body>
